# install-backend

./: .clang-format  .gitignore  README.org  a.out  file.json  install.c  main.c  meson.build
include/: chroot_funcs.h  misc.h  parse_funcs.h  partition_funcs.h
src/: chrootOperations.c  chroot_funcs.c  customStructs.c  execProg.c  misc.c  parse.c  parse_funcs.c  partitionFunctions.c  partition_funcs.c
